1999-05-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* win32dib.c (dib_snapshot): Select depth from device context
	depth (BITSPIXEL).

	* internal.m (keep_inside_screen): For Windows, use GetDeviceCaps
	instead of GetWindowRect for determining desktop pixel size.

1999-05-24  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (noinst_LTLIBRARIES): Switch from lib_LTLIBRARIES.

1999-05-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* global.h: Extern globalTkInterp and initTkObjc.

1999-05-01  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Histogram.[hm] ([Histogram -setBinCount:]): Replaces -setNumBins:.
	([Histogram -setActiveOutlierText:count:]): Change arguments
	to be unsigned.

	* Histogram.m: Adjust throughout for numBins -> binCount.

	* Histogram.h (Histogram): Change numBins to binCount.

1999-04-29  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.h: Include swarmconfig.h and use HAVE_XPM_H and
	HAVE_X11_XPM_H to decide where to include xpm.h from.

1999-04-28  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Pixmap.m ([Pixmap -_loadPNG_]): Use PTRUINT as cast intermediary.

	* Raster.m: Include swarmconfig.h
	([Raster -handleButton:X:Y:]): Cast x and y to PTRINT before
	casting to void *.

	* internal.h: Include misc.h before png.h (include standard
	headers in a well-behaved way that would otherwise be done 
	unprotected in png.h).

1999-04-27  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): Don't call XFreeColors
	with alloc_pixels if alloc_pixels doesn't exist (e.g. Irix 6.5).
	(tkobjc_pixmap_update_raster): Likewise don't request
	XpmReturnAllocPixels.  [Note: this is untested as to whether a memory
	leak occurs on XpmFreeAttributes or not.]

1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispIn:]): Move 
	to setting phase.

1999-04-19  Marcus G. Daniels  <mgd@helen.santafe.edu>
